fix: remove duplicate vertical-align property in allergies.css
Remove redundant 'vertical-align: text-top' declaration from
td#allergiesColumnTwoRowTwo selector. The second declaration
'vertical-align: top !important' was overriding it anyway,
causing potential confusion for maintainers.

--- a/src/main/webapp/css/allergies.css
+++ b/src/main/webapp/css/allergies.css
@@ -126,7 +126,6 @@ td#allergiesColumnOneRowTwo p.PropSheetLevel1CurrentItemRed {
 }
 
 td#allergiesColumnTwoRowTwo {
-	vertical-align: text-top;
 	width: 80% !important;
 	margin:0px !important;
 	padding:0px !important;
